--- a/css/cssSuites.css
+++ b/css/cssSuites.css
@@ -68,11 +68,18 @@ h2 {
 }
 
 .product {
+    width: 27%; /* Ajustement de la largeur pour 4 produits par ligne */
+    margin-right: 2%; /* Espace entre chaque produit */
+    display: inline-block;
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+}
+
+.product:last-child {
+    margin-right: 0; /* Suppression de la marge à droite pour le dernier produit */
 }
 
 .product img {
@@ -88,12 +95,14 @@ h2 {
     margin-bottom: 10px;
     color: #333;
 }
+
 .product p.price {
     text-align: center;
     font-weight: bold;
     color: #555;
     margin-bottom: 10px;
 }
+
 .product button.btn {
     display: block;
     margin: auto;
@@ -105,6 +114,7 @@ h2 {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+
 .product button.btn:hover {
     background-color: #2980b9;
 }
